# booksfastapi

./: .gitignore  database.db  database.py  docker-compose.yml  dtos.py  main.py  models.py  pyproject.toml
repositories/: author.py  book.py
routes/: author.py  book.py
services/: author.py  book.py
